test/libsolidity/syntaxTests/super/super_in_library.sol
library L {
  function f() public {
    (super);
  }
}
// ----
// DeclarationError 7576: (41-46): Undeclared identifier. "super" is not (or not yet) visible at this point.
